RESOLVED FIXED57795
HTML5 Player Has no Fullscreen Mode
https://bugs.webkit.org/show_bug.cgi?id=57795
Summary HTML5 Player Has no Fullscreen Mode
Jer Noble
Reported 2011-04-04 15:15:18 PDT
3/31/11 11:23 PM Joe Thompson: Summary: The HTML 5 video element no longer has a fullscreen button or can be put into fullscreen programatically as "webkitSupportsFullscreen" always returns false. Steps to Reproduce: Using WebKit's HTML 5 video element with the default Safari controls or using custom ones (such as on Vimeo) and attempt to put it into fullscreen mode. Expected Results: Like on Snow Leopard there is a fullscreen button in the default Safari controls or a custom control that enabled the functionality through JavaScript. Actual Results: The default Safari controls that have been updated in Lion have no fullscreen button and JavaScript can no longer programatically put the video element into fullscreen. Regression: Fullscreen support (required to ensure HTML 5 video elements can be properly used to replace traditional Flash video players) worked on previous versions of Safari on Snow Leopard. Notes: N/A
Attachments
Patch (1.36 KB, patch)
2011-04-04 15:27 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-04-04 15:15:33 PDT
Jer Noble
Comment 2 2011-04-04 15:27:45 PDT
Darin Adler
Comment 3 2011-04-04 16:46:19 PDT
Comment on attachment 88142 [details] Patch Is there an easy way to regression-test this?
Jer Noble
Comment 4 2011-04-05 08:54:27 PDT
(In reply to comment #3) > (From update of attachment 88142 [details]) > Is there an easy way to regression-test this? Not really; we'd have to convince DRT to answer "false" to supportsFullscreenForNode(), and "true" to supportsFullscreenForElement(), which would break a lot of existing tests on platforms which don't support the new API.
Jer Noble
Comment 5 2011-04-05 08:54:59 PDT
OTOH, I have a bug which would add support for the new API to WebKitTestRunner, and once that's fixed, this would be easily regression testable.
Jer Noble
Comment 6 2011-04-05 08:56:17 PDT
That WebKitTestRunner bug is: bug #56318.
WebKit Commit Bot
Comment 7 2011-04-05 15:23:35 PDT
Comment on attachment 88142 [details] Patch Clearing flags on attachment: 88142 Committed r82991: <http://trac.webkit.org/changeset/82991>
WebKit Commit Bot
Comment 8 2011-04-05 15:23:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.