2011-04-05  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        HTML5 Player Has no Fullscreen Mode
        https://bugs.webkit.org/show_bug.cgi?id=57795

        * html/HTMLVideoElement.cpp:
        (WebCore::HTMLVideoElement::supportsFullscreen): Call the new ChromeClient API
            supportsFullScreenForElement() before the old supportsFullScreenForNode() API.

Canonical link: https://commits.webkit.org/72773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82991 268f45cc-cd09-0410-ab3c-d52691b4dbfc